
	CHANGES IN spatstat VERSION 1.39-2

OVERVIEW

   o We thank Andrew Lister, Brian Ripley, Dominic Schuhmacher
   and Maxime Woringer for contributions.

   o Mathematical operations for images.

   o Faster checking of large datasets

   o Bug fixes.

   o Version nickname: 'Do The Maths'

NEW FUNCTIONS

   o Mathematical operations are now supported for images.
   For example:   inc <- atan(bei.extra$grad) * 180/pi
   See help(Math.im)

   o anyDuplicated.ppp, anyDuplicated.ppx
   Fast replacements for any(duplicated(x)) for point patterns.

SIGNIFICANT USER-VISIBLE CHANGES

   o pairorient
   Labels and descriptions of columns have been corrected.

   o ppp
   Accelerated.

   o Gcom, Gres
   When conditional=TRUE and restrict=TRUE, the Hanisch estimate
   was not calculated exactly as described in Appendix E.1 of 
   Baddeley, Rubak and Moller (2011). The intensity was estimated 
   on the full window rather than the eroded window.
   Fixed.   

   o print.slrm
   Output now respects options('width')

BUG FIXES

   o markcorrint
   Results were completely incorrect.
   Bug introduced in spatstat 1.39-0, october 2014.
   Fixed.

   o Kinhom
   Ignored argument 'reciplambda2' in some cases.
   Bug introduced in spatstat 1.39-0, october 2014.
   Fixed.

   o $<-.hyperframe
   Columns containing character values were converted to factors.
   Fixed.

   o profilepl
   Crashed in some cases when the interaction was multitype.
   [Spotted by Andrew Lister.]
   Fixed.

   o profilepl
   Crashed if the model involved covariates that were not
   given in a 'data' argument.
   Fixed.

	CHANGES IN spatstat VERSION 1.39-1

OVERVIEW

   o Urgent bug fix.

   o We thank Suman Rakshit and Brian Ripley for contributions.

BUG FIXES

   o bdry.mask, convexhull
   In R-devel only, these functions could return an empty window,
   causing errors in other packages.
   [Spotted by Brian Ripley.]
   Fixed.

   o project2segment