@@ -1,7 +1,7 @@
 Package: spatstat
 Version: 1.39-2
 Nickname: Do The Maths
-Date: 2014-11-11
+Date: 2014-11-12
 Title: Spatial Point Pattern analysis, model-fitting, simulation, tests
 Author: Adrian Baddeley <Adrian.Baddeley@uwa.edu.au>,
 	Rolf Turner <r.turner@auckland.ac.nz> 
@@ -70,6 +70,7 @@ Author: Adrian Baddeley <Adrian.Baddeley@uwa.edu.au>,
 	R. John-Chandran; 
 	D. Johnson; 
 	M. Khanmohammadi;
+	P. Kovesi;
 	M. Kuhn; 
 	J. Laake; 
 	F. Lavancier;
