@@ -915,6 +915,7 @@ export("intensity.ppp")
 export("intensity.quadratcount")
 export("intensity.splitppp")
 export("interp.colourmap")
+export("interp.colours")
 export("interp.im")
 export("intersect.owin")
 export("intersect.ranges")     
