@@ -168,4 +168,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2014-08-27" "1.38-1" 803 1965 48 80833 25191
 "2014-10-23" "1.39-0" 824 2015 49 82274 25554
 "2014-10-24" "1.39-1" 824 2015 49 81990 25554
-"2014-11-11" "1.39-2" 825 2022 49 82133 25554
+"2014-11-12" "1.39-2" 826 2023 50 82140 25554
